Closed
Bug 1363614
Opened 9 years ago
Closed 9 years ago
Crash in mozalloc_abort | NS_DebugBreak | mozilla::ipc::LogicError | mozilla::dom::PBrowser::Transition
Categories
(Core :: DOM: Content Processes, defect)
Tracking
()
RESOLVED
FIXED
mozilla55
| Tracking | Status | |
|---|---|---|
| firefox-esr52 | --- | unaffected |
| firefox53 | --- | unaffected |
| firefox54 | --- | unaffected |
| firefox55 | --- | fixed |
People
(Reporter: ting, Assigned: ehsan.akhgari)
References
Details
(Keywords: crash)
Crash Data
Attachments
(1 file)
This bug was filed from the Socorro interface and is
report bp-78066d4e-5172-4875-8ae3-149000170509.
=============================================================
Top #18 of Nightly 20170507030205 on Windows, 10 reports form 5 installations.
| Assignee | ||
Comment 1•9 years ago
|
||
The crashes are happening because the actor is dead. I think we should avoid doing the IPC calls in that case.
Assignee: nobody → ehsan
| Assignee | ||
Comment 2•9 years ago
|
||
Attachment #8866188 -
Flags: review?(mconley)
Comment 3•9 years ago
|
||
Comment on attachment 8866188 [details] [diff] [review]
Don't attempt to notify the parent about the change in the number of beforeunload event listeners if our IPC link is already severed
Review of attachment 8866188 [details] [diff] [review]:
-----------------------------------------------------------------
Seems kinda strange that the IPC Actor parent classes wouldn't just do this internally, but okay.
Attachment #8866188 -
Flags: review?(mconley) → review+
| Assignee | ||
Comment 4•9 years ago
|
||
Oh, this is a very normal type of crash, our IPC layer has no protection against anything if you call into it after an actor gets destroyed. If you aren't careful you can easily end up in the Transition() function in a place like this: <https://searchfox.org/mozilla-central/source/__GENERATED__/ipc/ipdl/PBrowser.cpp#34> which is what's happening here. :-)
(I really wish our IPC layer would protect us against this, I'm sick of fixing crashes like this honestly!)
Pushed by eakhgari@mozilla.com:
https://hg.mozilla.org/integration/mozilla-inbound/rev/d9aa3c7ea030
Don't attempt to notify the parent about the change in the number of beforeunload event listeners if our IPC link is already severed; r=mconley
Comment 6•9 years ago
|
||
| bugherder | ||
Status: NEW → RESOLVED
Closed: 9 years ago
status-firefox55:
--- → fixed
Resolution: --- → FIXED
Target Milestone: --- → mozilla55
Updated•9 years ago
|
status-firefox53:
--- → unaffected
status-firefox54:
--- → unaffected
status-firefox-esr52:
--- → unaffected
You need to log in
before you can comment on or make changes to this bug.
Description
•