Bug 1363614 - Don't attempt to notify the parent about the change in the number of beforeunload event listeners if our IPC link is already severed; r=mconley